[tool.poetry]
name = "liquidbase"
version = "0.1.2"
description = ""
authors = ["Mikkel Vilstrup <mikkel@vilstrup.dk>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
dill = "^0.3.6"
pandas = "^1.5.1"
numpy = "^1.23.4"
orjson = "^3.8.1"
Pympler = "^1.0.1"
asciitree = "^0.3.3"
SQLAlchemy = {extras = ["mypy"], version = "^1.4.42"}

[tool.poetry.dev-dependencies]
pytest = "^7.2"
flake8 = "^5.0.4"
mypy = "^0.982"
black = {version = "^22.10.0", allow-prereleases = true}
pylint = "^2.15.5"
coverage = "^6.5.0"
coveralls = "^3.3.1"
bandit = "^1.7.4"
dodgy = "^0.2.1"
pre-commit = "^2.20.0"

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
